// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Registration action creators createIdentity should attempt to create an identity 1`] = `
Array [
  Object {
    "type": "SET_LOADING_MSG",
    "value": "Fueling with ether",
  },
  Object {
    "type": "SET_LOADING_MSG",
    "value": "Registering decentralized identity",
  },
  Object {
    "type": "DID_SET",
    "value": undefined,
  },
  Object {
    "type": "SET_LOADING_MSG",
    "value": "Preparing launch",
  },
  Object {
    "actions": Array [
      Object {
        "params": Object {
          "mnemonic": "exhibit history avoid kit gaze pulse yellow portion hold lottery panda figure",
        },
        "routeName": "SeedPhrase",
        "type": "Navigation/NAVIGATE",
      },
    ],
    "index": 0,
    "key": undefined,
    "type": "Navigation/RESET",
  },
]
`;

exports[`Registration action creators createIdentity should attempt to create an identity 2`] = `
Array [
  Array [
    Object {
      "data": "4f8d84403d760b5b3fc5426c90827dab",
      "pass": "secret",
    },
  ],
]
`;

exports[`Registration action creators createIdentity should attempt to create an identity 3`] = `
Array [
  Array [
    Object {
      "controllingKeyPath": "m/73'/0'/0'/0",
      "did": undefined,
    },
  ],
]
`;

exports[`Registration action creators createIdentity should attempt to create an identity 4`] = `Array []`;

exports[`Registration action creators createIdentity should attempt to create an identity 5`] = `
Array [
  Array [
    Object {
      "data": Array [
        2,
        190,
        222,
        236,
        223,
        239,
        223,
        32,
        17,
        81,
        201,
        162,
        78,
        254,
        96,
        10,
        97,
        136,
        138,
        150,
        254,
        179,
        2,
        244,
        3,
        231,
        162,
        235,
        71,
        152,
        56,
        126,
        92,
      ],
      "type": "Buffer",
    },
  ],
]
`;

exports[`Registration action creators startRegistration should save a password and initiate the registration process 1`] = `
Array [
  Object {
    "actions": Array [
      Object {
        "routeName": "Entropy",
        "type": "Navigation/NAVIGATE",
      },
    ],
    "index": 0,
    "key": undefined,
    "type": "Navigation/RESET",
  },
]
`;

exports[`Registration action creators submitEntropy should correctly navigate to route and provide the entropy 1`] = `
Array [
  Object {
    "actions": Array [
      Object {
        "routeName": "Loading",
        "type": "Navigation/NAVIGATE",
      },
    ],
    "index": 0,
    "key": undefined,
    "type": "Navigation/RESET",
  },
  Object {
    "type": "SET_LOADING_MSG",
    "value": "Encrypting and storing data locally",
  },
]
`;
